# k8s-question-and-answer-system

./: README.md
.github/workflows/: api-ci.yaml  preloader-ci.yaml
api/: .env.template  Dockerfile  compose.yaml  conftest.py  main.py  pyproject.toml  test_main.py
app/: .gitignore  README.md  pyproject.toml  train.ipynb
app/data/cache/: finetuned.json  rag.json
app/data/datasets/: benchmark.jsonl  eval.jsonl  finetunning.jsonl
infra/base/: app-deployment.yaml  app-service.yaml  grafana-deployment.yaml  grafana-provisioning-configmap.yaml  grafana-service.yaml  kustomization.yaml  model-cache-pvc.yaml  model-preloader-job.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  vllm-deployment.yaml  vllm-model-cache-pvc.yaml  vllm-service.yaml
infra/overlays/dev/: kustomization.yaml  patch-grafana-provisioning.yaml  patch-grafana.yaml  patch-llm-app.yaml  patch-prometheus-config.yaml  patch-prometheus.yaml  patch-redis-cache.yaml  patch-vllm-server.yaml
infra/overlays/prod/: kustomization.yaml  patch-grafana-provisioning.yaml  patch-llm-app.yaml  patch-prometheus-config.yaml
preloader/: .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
stress-test/: locustfile.py  pyproject.toml
