[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
    "trl>=1.1.0",
]
