[project]
name = "preloader"
version = "0.1.0"
description = "Preloads Sentence Transformer models into a shared cache volume"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.0.0",
    "hf-transfer>=0.1.4",
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.14.8",
]
